add order controller

--- a/Views/Client/Edit.cshtml
+++ b/Views/Client/Edit.cshtml
@@ -44,7 +44,9 @@
         </form>
     </div>
 </div>
-
+<div>
+    <a href="@Url.RouteUrl("Order_ClientOrder")">Orders</a>
+</div>
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
