--- a/Views/Client/Edit.cshtml
+++ b/Views/Client/Edit.cshtml
@@ -45,7 +45,7 @@
     </div>
 </div>
 <div>
-    <a href="@Url.RouteUrl("Order_ClientOrder")">Orders</a>
+    <a href="@Url.RouteUrl("Order_ClientOrders")">Orders</a>
 </div>
 <div>
     <a asp-action="Index">Back to List</a>
