--- a/Views/Order/ClientOrders.cshtml
+++ b/Views/Order/ClientOrders.cshtml
@@ -36,7 +36,7 @@
                         @Html.DisplayFor(modelItem => item.Service.Name)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Client.FirstName+" "+item.Client.LastName)
+                        @Html.DisplayFor(modelItem => item.Client.LastName)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Amount)
